<resources>
    <string name="app_name">WhatsThatFood</string>
    <string name="auth_failed">Authentication Failed!</string>
    <!--string name="facebook_app_id">214491149022181</string-->
    <string name="facebook_app_id">243602372758041</string>
    <string name="loading">Loading..</string>
    <string name="title_activity_basic">BasicActivity</string>
    <string name="create_memory_save">Save</string>
    <string name="create_memory">Create Memory</string>
    <string name="create_memory_photo_desc">Your photo</string>
    <string name="create_memory_title">Title</string>
    <string name="create_memory_loc">Location</string>
    <string name="create_memory_description">Description</string>
    <string name="collage_title">What\'s That Food?</string>
    <string name="collage_search">Search</string>
    <string name="search">Search</string>
    <string name="Logout">Logged Out</string>
    <string name="settings_name">Name</string>
    <string name="settings_title">Settings</string>
    <string name="main_menu_settings">Settings</string>
    <string name="main_menu_logout">Log out</string>
    <string name="image_popup_desc">Full image</string>
    <string name="memory_item_desc">Memory image</string>
    <string name="create_account_finish">Finish</string>
    <string name="create_account_login">Log in</string>
    <string name="filter_rating">Rating</string>
    <string name="filter_price">Price</string>
    <string name="filter_created">Created</string>
    <string name="search_noresults">No results.</string>
    <string name="search_clearfilters">Clear all filters</string>
    <string name="dialog_delete_memory_title">Delete this Memory?</string>
    <string name="dialog_delete_memory_message">Once this Memory is deleted, it cannot be restored.</string>
    <string name="dialog_delete_pos">Delete</string>
    <string name="dialog_delete_neg">Cancel</string>
    <string name="edit_memory_title">Edit Memory</string>
    <string name="edit_memory_photo_desc">Your photo</string>
    <string name="create_memory_alarm">Set Alarm</string>
    <string name="image_transition">image_transition</string>
    <string name="memory_form_getloc">Pick location</string>
    <string name="memory_form_discard">Discard changes?</string>
    <string name="memory_form_discard_pos">Discard</string>
    <string name="memory_form_discard_neg">Cancel</string>
    <string name="reset_password_sent">Password reset email sent.</string>
    <string name="email_verification_sent">Verification Email sent.Please verify.</string>
    <string name="share_loading_title">Preparing image</string>
    <string name="share_loading_message">Please wait...</string>
    <string name="share_loading_failed">Can\'t send image.</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="view_memory_edit">Edit</string>
    <string name="view_memory_delete">Delete</string>
    <string name="collage_no_memories">Looks like you haven\'t created any memories yet! Click the + button to get started.</string>

</resources>
