<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.wtf.whatsthatfoodapp.memory.MemoryFormFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/memory_form_title_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/memory_form_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_memory_title"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/memory_form_loc_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/memory_form_loc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_memory_loc"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/memory_form_desc_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/memory_form_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_memory_description"
                android:inputType="textMultiLine"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <RatingBar
                android:id="@+id/memory_form_rating"
                style="@style/RatingBarRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RatingBar
                android:id="@+id/memory_form_price"
                style="@style/RatingBarPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
