<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_memory"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.wtf.whatsthatfoodapp.memory.CreateMemoryActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/create_memory_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/create_memory"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/create_memory_photo"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:adjustViewBounds="false"
                android:contentDescription="@string/create_memory_photo_desc"
                android:onClick="expandImage"
                app:srcCompat="@android:color/transparent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/create_memory_title_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/create_memory_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/create_memory_title"
                        android:inputType="text"/>
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/create_memory_loc_wrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:errorEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/create_memory_loc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/create_memory_loc"
                            android:inputType="text"/>
                    </android.support.design.widget.TextInputLayout>

                    <ImageButton
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:id="@+id/pickerButton"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:onClick="createPlacePicker"
                        android:scaleType="fitCenter"
                        android:src="@drawable/my_location"/>
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/create_memory_description_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/create_memory_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/create_memory_description"
                        android:inputType="textMultiLine"/>

                </android.support.design.widget.TextInputLayout>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/rating_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Rating"/>

                    <RatingBar
                        android:id="@+id/create_rating_bar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:stepSize="1"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/price_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Price"
                        />

                    <RatingBar
                        android:id="@+id/create_price_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:stepSize="1"/>
                </TableRow>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/create_memory_saved"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Save For Next Time"/>

                        <CheckBox
                            android:id="@+id/saveFNTcheck"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/create_memory_reminder"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Remind me later"/>

                        <CheckBox
                            android:id="@+id/remindCheck"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </TableRow>

                </TableLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
